Fix code block and collapse behavior (website) (#2403)
* fix collapse behavior

* fix small issue in java doc

--- a/website/assets/sass/style.scss
+++ b/website/assets/sass/style.scss
@@ -1,5 +1,4 @@
 @import "variables";
-@import "pygments";
 @import "bootstrap";
 @import "typography";
 
@@ -165,6 +164,7 @@ aside.hn-sidebar {
 
 // Main content on docs pages
 section.hn-docs-main {
+  max-width: 100%;
   margin-bottom: $docs-main-bottom-margin;
 
   header.hn-docs-header {
